--- a/formulario.html
+++ b/formulario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,58 +7,22 @@
     <link rel="stylesheet" href="formulario.css">
 </head>
 <body>
-    <div class="box">
-        <form action="">
-            <fieldset>
-                <legend><b>Fórmulario de Voluntários</b></legend>
-                <br>
-                <div class="inputBox">
-                    <input type="text" name="nome" id="nome" class="inputUser" required>
-                    <label for="nome" class="labelinput">Nome completo</label>
-                </div>
-                <br><br>
-                <div class="inputBox">
-                    <input type="email" name="email" id="email" class="inputUser" required>
-                    <label for="email"class="labelinput">Email</label>
-                    <div>
-                        <br><br>
-                        <div class="inputBox">
-                            <input type="tel" name="Telefone" id="telefone" class="inputUser" required>
-                            <label for="telefone"class="labelinput">Telefone</label>
-                    </div>
-                   <p>Sexo:</p>
-                   <input type="radio" id="feminino" name="genero" value="feminino" required>
-                   <label for="feminino">Feminino</label>
-                   <input type="radio" id="Masculino" name="genero" value="Masculino" required>
-                   <label for="feminino">Masculino</label>
-                   <input type="radio" id="Outros" name="genero" value="Outros" required>
-                   <label for="feminino">Outros</label>
-                   <br><br>
-                   <div class="inputBox">
-                    <label for="ano_nascimento"><b>Data de Nascimento</b></label>
-                    <input type="date" name="data de nascimento" id="email" class="inputUser" required>
-                    <div>
-                    <br><br>
-                        <div class="inputBox">
-                            <input type="text" name="cidade" id="cidade" class="inputUser" required>
-                            <label for="telefone"class="labelinput">Cidade</label>
-                    </div>
-                    <br><br>
-                    <div class="inputBox">
-                        <input type="text" name="estado" id="estado" class="inputUser" required>
-                        <label for="estado">Estado</label>
-                </div>
-                <br><br>
-                <div class="inputBox">
-                    <input type="text" name="Endereço" id="Endereço" class="inputUser" required>
-                    <label for="telefone">Endereço</label>
-            </div>
-            <br><br>
-            <input type="submit" name="submit" id="submit">
-                        
-            </fieldset>
-        </form>
-    </div>
+    <section>
+        <h2>Contato:</h2>
+        <form action="https://api.staticforms.xyz/submit" method="post">
+            <label>Nome</label>
+            <input type="text" name="name" placeholder="Digite o seu nome" autocomplete="off" required>
+            <label>Email</label>
+            <input type="email" name="email" placeholder="Digite o seu email" autocomplete="off" required>
+            <label>Telefone</label>
+            <input type="telefone" name="email" placeholder="Digite o seu telefone" autocomplete="off" required>
+            <label>Mensagem</label>
+            <textarea name="message" cols="30" rows="10" placeholder="Digite suas ideias/sugestões aqui" required></textarea>
+            <button type="submit">Enviar</button>
 
+            <input type="hidden" name="accessKey" value="397197a0-ef23-4382-bc26-eed23c590884">
+            <input type="hidden" name="redirectTo" value="file:///C:/aula%2029.06/obrigado.html">
+        </form>
+    </section>
 </body>
 </html>
