--- a/formulario.html
+++ b/formulario.html
@@ -21,7 +21,7 @@
             <button type="submit">Enviar</button>
 
             <input type="hidden" name="accessKey" value="397197a0-ef23-4382-bc26-eed23c590884">
-            <input type="hidden" name="redirectTo" value="file:///C:/aula%2029.06/obrigado.html">
+            <input type="hidden" name="redirectTo" value="file:///C:/trabalho%20final/trabalho-final/obrigada.html">
         </form>
     </section>
 </body>
