--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>instituto fazer o bem</title>
 </head>
 <body>
@@ -28,6 +29,8 @@
         </ul>
     </header>
 
+    <br/><br/><br/>
+
     <h2>Consumo sustentável e meio ambiente</h2>
 
     <h3>Sobre o projeto:</h3>
@@ -46,7 +49,9 @@
         algo maior e que mais pessoas poderiam fazer a diferença. Assim expandimos mais o nosso projeto, decidimos 
         criar um site e por lá, além das pessoas conhecerem elas também poderiam se voluntariar através do nosso 
         formulários. Assim, será disponibilizado um pouco do que iremos fazer esse mês e com a sua ajuda e interesse 
-        podemos fazer um diferencial para cada problema. </p> 
+        podemos fazer um diferencial para cada problema.
+     </p> 
+     <p>
         Recursos naturais são finitos, ou seja em determinado momento vão acabar, este conceito trouxe 
         uma nova forma de desenvolvimento que leva em conta o meio ambiente ,ele sugere, qualidade em 
         vez de quantidade, com a redução do uso de matérias-primas e produtos e o aumento da reutilização
@@ -60,16 +65,22 @@
        12 – Consumo e produção responsáveis: assegurar padrões de produção e de consumo sustentáveis
     </p>   
     Venha ser voluntário!
-</p>
-<footer class="rodape">
-    <p>Contatos:</p>
-    <p><a href="mailto:hege@example.com">hege@example.com</a></p>
-    <p>
-        <p>
-            Por isso, abaixo deposite uma ideia ou apenas o seu interesse em fazer parte de um mundo: 
-            <p>
-        <a href="https://forms.gle/184YJqvqBbwfF8GPA">https://forms.gle/184YJqvqBbwfF8GPA</a>
-        </p>
+
+<br/><br/><br/>
+
+<footer>
+    <div class="footer-content">
+   <h3>Fazer o Bem</h3
+    <p> Quer saber mais? Conheça nossas redes sociais abaixo</p>
+    <ul class="socials">
+        <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin-square"></i></i></a></li>
+        <li><a href="#"><i class="fa fa-instagram"></i></i></a></li>
+    </ul>
+    </div>
+<div class="footer-bottom">
+    <p>Fazer o bem &copy; 2023 instituição. <span>Colabore</span></p>
+</div>
     </footer>
 </body> 
 </html>
